--- a/Web/WEB-INF/web.xml
+++ b/Web/WEB-INF/web.xml
@@ -1,7 +1,79 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app>
 
-	<filter>
+    <servlet>
+        <servlet-name>OrderServlet</servlet-name>
+        <servlet-class>tmall.servlet.OrderServlet</servlet-class>
+    </servlet>
+ 
+    <servlet-mapping>
+        <servlet-name>OrderServlet</servlet-name>
+        <url-pattern>/orderServlet</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>UserServlet</servlet-name>
+        <servlet-class>tmall.servlet.UserServlet</servlet-class>
+    </servlet>
+ 
+    <servlet-mapping>
+        <servlet-name>UserServlet</servlet-name>
+        <url-pattern>/userServlet</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>ProductImageServlet</servlet-name>
+        <servlet-class>tmall.servlet.ProductImageServlet</servlet-class>
+    </servlet>
+ 
+    <servlet-mapping>
+        <servlet-name>ProductImageServlet</servlet-name>
+        <url-pattern>/productImageServlet</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>CategoryServlet</servlet-name>
+        <servlet-class>tmall.servlet.CategoryServlet</servlet-class>
+    </servlet>
+
+
+
+    <servlet>
+        <servlet-name>ProductServlet</servlet-name>
+        <servlet-class>tmall.servlet.ProductServlet</servlet-class>
+    </servlet>
+ 
+    <servlet-mapping>
+        <servlet-name>ProductServlet</servlet-name>
+        <url-pattern>/productServlet</url-pattern>
+    </servlet-mapping>
+     
+    <servlet-mapping>
+        <servlet-name>CategoryServlet</servlet-name>
+        <url-pattern>/categoryServlet</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>PropertyServlet</servlet-name>
+        <servlet-class>tmall.servlet.PropertyServlet</servlet-class>
+    </servlet>
+ 
+    <servlet-mapping>
+        <servlet-name>PropertyServlet</servlet-name>
+        <url-pattern>/propertyServlet</url-pattern>
+    </servlet-mapping>
+
+    <filter>
+        <filter-name>EncodingFilter</filter-name>
+        <filter-class>tmall.filter.EncodingFilter</filter-class>
+    </filter>
+ 
+    <filter-mapping>
+        <filter-name>EncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>    
+    
+    <filter>
         <filter-name>BackServletFilter</filter-name>
         <filter-class>tmall.filter.BackServletFilter</filter-class>
     </filter>
@@ -10,5 +82,4 @@
         <filter-name>BackServletFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-    
 </web-app>
